--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="script.js"></script>
     <h1>Calinka</h1>
     <p>Calinka - distributed link catalog / Калинка - распределенный каталог ссылок </p>
-    <p>Repository on <a href="https://github.com/vladkorch/calinka" target="_blank">GitHub.Com</a> Site <a href="http://calinka.ru" traget="_blank">Calinka.Ru</a></p>
+    <p>Repository on <a href="https://github.com/vladkorch/calinka" target="_blank">GitHub.Com</a>; Site <a href="http://calinka.ru" target="_blank">Calinka.Ru</a></p>
     <p>20250724 Initial Commit</p>
   </body>
 </html>
