--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
   <body>
     <script src="script.js"></script>
     <h1>Calinka</h1>
-    <p>Calinka - distributed link catalog / Калинка - распределенный каталог ссылок </p>
+    <p>Calinka - distributed link catalog / Калинка - распределенный каталог ссылок
+    <br>Калинка — это инновационная программа для создания и управления распределённым
+    <br>каталогом ссылок, обеспечивающая удобное хранение, организацию и доступ к веб-ресурсам.
+    <br>Она позволяет пользователям собирать, категоризировать и делиться ссылками в децентрализованной
+    <br>среде, обеспечивая высокую доступность и устойчивость данных. Благодаря интуитивно понятному
+    <br>интерфейсу и поддержке совместной работы, Калинка идеально подходит для команд, исследователей
+    <br>и энтузиастов, стремящихся эффективно управлять информацией. Программа поддерживает автоматическую
+    <br>проверку актуальности ссылок, тегирование и поиск, а также синхронизацию данных между устройствами.</p>
     <p>Repository on <a href="https://github.com/vladkorch/calinka" target="_blank">GitHub.Com</a>; Site <a href="http://calinka.ru" target="_blank">Calinka.Ru</a></p>
-    <p>20250724 Initial Commit</p>
+    <p>20250723 Initial Commit</p>
   </body>
 </html>
