--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <script src="script.js"></script>
     <h1>Calinka</h1>
-    <p>Calinka - distributed link catalog / Калинка - распределенный каталог ссылок
+    <br><img src="calinka400.webp" alt="Calinka Distributed Link Catalog">
+    <p><b>Calinka - distributed link catalog / Калинка - распределенный каталог ссылок</b>
     <br>Калинка — это инновационная программа для создания и управления распределённым
     <br>каталогом ссылок, обеспечивающая удобное хранение, организацию и доступ к веб-ресурсам.
     <br>Она позволяет пользователям собирать, категоризировать и делиться ссылками в децентрализованной
